--- a/memu-test-func-app/memu-test-func-app.csproj
+++ b/memu-test-func-app/memu-test-func-app.csproj
@@ -8,9 +8,11 @@
     <RootNamespace>memu_test_func_app</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.8.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
